# PolyBoy

./: .gitignore  README.md
Rapports/Joao Brilhante/: joaobrilhante.md
Rapports/Olivier Doussaud/: Dico.md  olivierdoussaud.md
docs/olivier-doussaud/: DICTIONARY.md
models/: ArduinoDue.SLDASM  BoitierBas.SLDPRT  BoitierBas.STL  BoitierHaut.SLDPRT  BoitierHaut.STL  BoitierHautV2.STL  Boulon.SLDPRT  Bouton.SLDPRT  Console.SLDASM  DPad.SLDPRT  ESP8266.SLDPRT  Ecran.SLDPRT  Entretoise10mm.SLDPRT  Entretoise12mm.SLDPRT  Entretoise15mm.SLDPRT  Entretoise20mm.SLDPRT  Entretoise25mm.SLDPRT  Entretoise8mm.SLDPRT  Gachette.SLDPRT  Interrupteur.SLDPRT  MembraneABXY.SLDPRT  MembraneDPad.SLDPRT  MembraneGachette.SLDPRT  MembraneStart.SLDPRT  ModuleSD.SLDPRT  PlaqueABXY.SLDPRT  PlaqueDPad.SLDPRT  PlaqueGachette1.SLDPRT  PlaqueGachette2.SLDPRT  PlaqueStart.SLDPRT  USBBreakout.SLDPRT  USBHost.SLDPRT  Vis14mm.SLDPRT  Vis3.8mm.SLDPRT  Vis4mm.SLDPRT  Vis8mm.SLDPRT  Volume.SLDPRT
models/Arduino Due/: Capacitor - Nichicon - UUR1C101MCL1GS.SLDPRT  Capacitor.SLDPRT  LED - Kingbright - KPT-3216EC.SLDPRT  MicroUSB AB - Hirose - ZX62D-AB-5P8.SLDPRT  MicroUSB B - Hirose - ZX62D-B-5P8.SLDPRT  Microchip - Atmel - SAM3X8EAU.SLDPRT  PCB - Arduino.SLDPRT  Switch - ESwitch - TLE3303.SLDPRT
src/Client/: client.py
src/Client/ESPClient/Client/: Client.ino
src/PolyGamepad/: Button.h  PolyGamepad.cpp  PolyGamepad.h
src/PolySD/: PolySD.cpp  PolySD.h
src/PolyTFT/: Image.cpp  Image.h  PolyTFT.cpp  PolyTFT.h  Sprite.cpp  Sprite.h
src/Psvita/: CMakeLists.txt
src/Psvita/src/: font.c  font.h  gfx.c  gfx.h  main.c
src/Server/: Score_Server.py  Server.py  Thread.py  help.txt  poeme.data  sokoban.data
src/examples/TestGamepad/: TestGamepad.ino
src/examples/TestTFT/: TestTFT.ino
